fixing switching to dark mode

--- a/src/main/react/frontend-app/src/components/SettingsCanvas/SettingsCanvas.css
+++ b/src/main/react/frontend-app/src/components/SettingsCanvas/SettingsCanvas.css
@@ -32,7 +32,7 @@
   .settingsTitle{
     font-size: 20px;
     font-weight: 600;
-    color: #002a4e;
+    color: #1c1c1d;
     margin-bottom: 0px;
     display: flex;
     flex-direction: row;
@@ -48,10 +48,19 @@
     align-items: center;
     align-self: center;
     justify-content: center;
+    margin-top: 2px;
   }
 
 
   .settingsBody{
     padding: 0 !important
+  }
+
+  .textDarkMode{
+    color: #fff;
+  }
+
+  .textDarkMode>h3{
+    color: #fff;
   }
  
